index.css
/* Colors: DRACULA (https://github.com/dracula/dracula-theme) */

@media screen and (min-width: 320px) { #container { width: 100%; } }
@media screen and (min-width: 480px) { #container { width: 80%; } }
@media screen and (min-width: 720px) { #container { width: 70%; } }
@media screen and (min-width: 960px) { #container { width: 60%; } }
@media screen and (min-width: 1080px) { #container { width: 50%; } }

::-webkit-scrollbar {
	display: none;
}

html {
	margin: 0;
	padding: 0;
	font-family: 'Ubuntu Nerd Font', sans-serif;
	overflow: -moz-scrollbars-none;
	scrollbar-width: none;
	font-size: 90%;

	-webkit-transform-style: preserve-3d;
	-moz-transform-style: preserve-3d;
	transform-style: preserve-3d;
}

body {
	color: #f8f8f2;
}

body:before {
	content: "";
	position: fixed;
	left: -5%;
	top: -5%;
	right: 0;
	z-index: -1;

	background:	url('/home/b1/.config/wall.png') no-repeat;
	background-size: cover;
	width: 110%;
	height: 110%;

	-webkit-filter: blur(8px);
	filter: blur(8px);
}

#date {
	text-align: center;
}

#container {
	margin: auto;

	border-top: 1px solid #8be9fd;
	background-color: rgba(40, 42, 54, 1);
	box-shadow: 0px 0px 25px #000;

	/* always centered */
	position: relative;
	top: 50%;
	transform: translateY(-50%);
}

article {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	margin: auto;
}

section {
	flex-grow: 1;
	flex-basis: .0001em;
	padding: 1em;
	margin: .5em;
	transition: .1s linear;
}
section:hover { background-color: rgba(68, 71, 90, 0.8); }
section h1 {
	text-align: center;
	padding-bottom: .5em;
	border-bottom: 1px solid rgba(248, 248, 242, 0.1)
}

ul { padding: 0 1.1em; list-style: none; }
ul li::before {
	content: "\f105";
	margin-left: -1em;
	width: 1em;
	display: inline-block;
	color: rgba(248, 248, 242, 0.4)
}
ul li.spacer::before { content: ""; }
ul li a { color: #8be9fd; text-decoration: none }
ul li a:hover, ul li a:active { color: #50fa7b }

input {
	display: block;
	width: 100%;
	border: 1px solid #3C474B;
	border-radius: 4px;
	background-color: #44475a;
	padding: 8px 14px;
	color: #bd93f9;
}

